<?xml version="1.0"?>
<package format="2">
  <name>bonsai</name>
  <version>0.5.0</version>
  <description>bonsai is a metapackage for BonSAI packages</description>
  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</maintainer>
  <license>Apache 2.0</license>

  <author>Leroy Ruegemer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bonsai_core</exec_depend>
  <exec_depend>bonsai_interfaces</exec_depend>
  <exec_depend>bonsai_skills</exec_depend>

  <exec_depend>bonsai_adapter_ros</exec_depend>
  
  <exec_depend>bonsai_msgs</exec_depend>
  <exec_depend>bonsai_scxml_engine</exec_depend>
  <exec_depend>bonsai_scxml_ros</exec_depend>

  <export>
    <metapackage />
  </export>
</package>