<package format="2">
  <name>bonsai_adapter_ros2</name>
  <version>0.7-SNAPSHOT</version>
  <description>
  This package provides foo capability.
  </description>
  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Rügemer</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>java</build_depend>
  <build_depend>bonsai_interfaces</build_depend>

</package>