<package>
	<name>bonsai_msgs</name>
	<version>0.4.0</version>
	<description>

		messages for Bonsai2

	</description>
	<maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</maintainer>
	<author email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</author>
	<license>LGPLv3</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>genmsg</build_depend>
	<build_depend>cmake_modules</build_depend>
	
	<run_depend>message_runtime</run_depend>
	
</package>
